gccida/g2/ssa_const_prop
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1523:4: error: expected ';' after expression
rtx m; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1523:5: error: use of undeclared identifier 'm'
rtx m; // rbp 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1565:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0 = v7; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1573:1: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
edge_info_0[edge_index] = succ->succ_next; 
^~~~~~~~~~~
edge_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1599:49: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
if ( *( _WORD *)insn == 32 && ( v23 = ( __int64)insn[2], *( _WORD *)v23 == 47) && **( _WORD **)( v23 + 16) == 152 ) 
                                                ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1602:25: error: expected expression
visit_phi_node( *( rtx *)&insn[2], v21); 
                        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1621:7: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
v11 = edge_info_0; 
      ^~~~~~~~~~~
      edge_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1630:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v13 = ( __int64)i[2]; 
                ^~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1635:23: error: expected ')'
visit_phi_node( ( rtx)v13, dest); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1635:15: note: to match this '('
visit_phi_node( ( rtx)v13, dest); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1677:7: error: use of undeclared identifier 'edge_info_0'; did you mean 'edge_info'?
v36 = edge_info_0; 
      ^~~~~~~~~~~
      edge_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:106:14: note: 'edge_info' declared here
static edge *edge_info;
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1707:13: error: invalid operands to binary expression ('struct rtx_def *' and 'uint64 *' (aka 'unsigned long long *'))
v45 = ( rtx)*( ( _QWORD *)v43 + 4); 
      ~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1727:47: error: expected ')'
df_insn_modify( v49, v50->data.bb[v48], ( rtx)v43); 
                                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1727:15: note: to match this '('
df_insn_modify( v49, v50->data.bb[v48], ( rtx)v43); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1730:13: error: invalid operands to binary expression ('struct rtx_def *' and 'uint64 *' (aka 'unsigned long long *'))
v46 = ( rtx)*( ( _QWORD *)v43 + 4); 
      ~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1733:51: error: expected expression
v46 = single_set_2( v39->data.rtx[v40], *( ( rtx *)v43 + 4)); 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1742:13: error: invalid operands to binary expression ('struct rtx_def *' and 'uint64 *' (aka 'unsigned long long *'))
v45 = ( rtx)*( ( _QWORD *)v43 + 4); 
      ~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1744:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v79 = ( _WORD *)v45[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1810:7: error: use of undeclared identifier 'm'
for ( m = first_insn_after_basic_block_note( v62); m; m = m[1].fld[0].rtx ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1810:52: error: use of undeclared identifier 'm'
for ( m = first_insn_after_basic_block_note( v62); m; m = m[1].fld[0].rtx ) 
                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/ssa-ccp.c:1810:55: error: use of undeclared identifier 'm'
for ( m = first_insn_after_basic_block_note( v62); m; m = m[1].fld[0].rtx ) 
                                                      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/ssa_const_prop/src/obj/ssa-ccp.o] Error 1
